# seminar-assess

./: .gitignore  README.md  biome.json  bun.lockb  package.json  tsconfig.base.json  turbo.json
.github/workflows/: release.yaml
apps/admin/: index.html  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.ts
apps/admin/src/: app.css  app.d.ts  hooks.server.ts  index.css  layout.tsx  main.tsx  router.ts
apps/admin/src/components/period/: pretest.tsx  (+1 more)
apps/admin/src/config/: redirects.tsx
apps/admin/src/context/: AuthProvider.tsx
apps/admin/src/hooks/: use-local-storage.ts
apps/admin/src/lib/: auth.ts  constants.ts  store.ts  types.ts
apps/admin/src/pages/: _app.tsx  index.tsx  load.tsx
apps/admin/src/routes/: +layout.svelte  +page.server.ts
apps/android/: package.json  svelte.config.js  vite.config.ts
apps/android/src/: app.css  hooks.client.ts  vite-env.d.ts
apps/android/src/lib/: constants.ts  localdb.ts  store.ts  types.ts
apps/android/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
apps/api/: package.json
apps/api/src/: index.ts
apps/api/src/lib/: auth.ts  middleware.ts  types.ts
apps/web/: next.config.ts  package.json  tailwind.config.ts  tailwind.d.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: footer.tsx
crates/seminar-assess-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.release.json
crates/seminar-assess-tauri/capabilities/: main.json
crates/seminar-assess-tauri/icons/: icon.icns
scripts/: gen-admin-link.sh  release.sh
(+118 files in other folders)
