[package]
name = "seminar-assess-tauri"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.2.0"
